@@ -1,5 +1,6 @@
 
 6.37  2015-12-13
+  - Added protocol and with_protocols methods to Mojo::Transaction::WebSocket.
   - Fixed a few reference encoding bugs in Mojo::JSON.
   - Fixed a few form generation bugs in Mojo::UserAgent::Transactor.
 
